--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="email_address">Email Address</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="phone">Phone</string>
 </resources>
