--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="call">Call</string>
     <string name="message">Message</string>
     <string name="name">Name</string>
-    <string name="phone_number">Phone Number</string>
+    <string name="Mobile">Mobile</string>
     <string name="email_address">Email Address</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="phone">Phone</string>
+    <string name="email">Email</string>
 </resources>
