--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,15 @@
     <string name="cancel">Cancel</string>
     <string name="phone">Phone</string>
     <string name="email">Email</string>
+    <string name="share">Share</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
+    <string name="share_contact"> [Name] %1$s \n[Mobile] %2$s \n[Email] %3$s
+    </string>
+    <string name="contact_sharing_massage">Contact sharing Message</string>
+    <string name="edit_contact">Edit Contact:</string>
+    <string name="delete_word">Delete word:</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="are_you_sure">Are you sure?</string>
 </resources>
