add search functionality to MainFragment for search contacts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="share_contact_as">Share contact as</string>
     <string name="file">File</string>
     <string name="text">Text</string>
+    <string name="search">Search</string>
 </resources>
