revisit code. also add back arrow in DetailFragment. in additional, save last search query with QueryPreferences.java class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     </string>
     <string name="contact_sharing_massage">Contact sharing Message</string>
     <string name="edit_contact">Edit Contact:</string>
-    <string name="delete_word">Delete word:</string>
+    <string name="delete_contact">Delete Contact:</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="are_you_sure">Are you sure?</string>
