add new column to database as telephoneType for save types of each contact telephone number. also add spinner to project in fragment_new_contact.xml to show the values of this column. in the following, add the logics of spinner in EditFragment, NewContactFragment and DetailFragment. at the end, revisit the code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="contact_image_in_recycler_view">contact image in recycler view.</string>
     <string name="insert_contact">insert contact</string>
     <string name="contact_icon">contact icon</string>
+    <string name="telephone_type">telephone type</string>
 </resources>
