--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="edit">Edit</string>
     <string name="share_contact"> [Name] %1$s \n[Mobile] %2$s \n[Email] %3$s</string>
     <string name="delete_contact"> Delete %1$s:</string>
+    <string name="delete_this_contact"> Delete contact:</string>
     <string name="contact_sharing_massage">Contact sharing Message</string>
     <string name="edit_contact">Edit Contact:</string>
     <string name="yes">Yes</string>
